# wll

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/wll-cli/: Cargo.toml
crates/wll-cli/src/: cli.rs  commands.rs  main.rs
crates/wll-crypto/: Cargo.toml
crates/wll-crypto/src/: chain.rs  hasher.rs  lib.rs  merkle.rs  signer.rs
crates/wll-dag/: Cargo.toml
crates/wll-dag/src/: audit.rs  dag.rs  error.rs  lib.rs  node.rs
crates/wll-diff/: Cargo.toml
crates/wll-diff/src/: blob_diff.rs  error.rs  lib.rs  state_diff.rs  tree_diff.rs
crates/wll-fabric/: Cargo.toml
crates/wll-fabric/src/: error.rs  event.rs  fabric.rs  hlc.rs  lib.rs  wal.rs
crates/wll-gate/: Cargo.toml
crates/wll-gate/src/: config.rs  error.rs  gate.rs  lib.rs  stage.rs
crates/wll-gate/src/stages/: capability.rs  mod.rs  policy.rs  validation.rs
crates/wll-index/: Cargo.toml
crates/wll-index/src/: entry.rs  error.rs  index.rs  lib.rs  status.rs
crates/wll-ledger/: Cargo.toml
crates/wll-ledger/src/: error.rs  lib.rs  memory.rs  projection.rs  records.rs  replay.rs  traits.rs  validation.rs
crates/wll-merge/: Cargo.toml
crates/wll-merge/src/: lib.rs
crates/wll-pack/: Cargo.toml
crates/wll-pack/src/: entry.rs  error.rs  index.rs  lib.rs  manager.rs  reader.rs  writer.rs
crates/wll-protocol/: Cargo.toml
crates/wll-protocol/src/: auth.rs  codec.rs  endpoint.rs  error.rs  lib.rs  message.rs
crates/wll-refs/: Cargo.toml
crates/wll-refs/src/: error.rs  lib.rs  memory.rs  names.rs  traits.rs  types.rs
crates/wll-sdk/: Cargo.toml
crates/wll-sdk/src/: commit.rs  error.rs  lib.rs  repository.rs
crates/wll-server/: Cargo.toml
crates/wll-server/src/: auth.rs  config.rs  error.rs  handler.rs  hooks.rs  lib.rs  router.rs  server.rs
crates/wll-store/: Cargo.toml
crates/wll-store/src/: error.rs  lib.rs  memory.rs  object.rs  traits.rs
crates/wll-sync/: Cargo.toml
crates/wll-sync/src/: error.rs  lib.rs  negotiation.rs  transport.rs  types.rs  verifier.rs
crates/wll-types/: Cargo.toml
crates/wll-types/src/: commitment.rs  error.rs  evidence.rs  identity.rs  lib.rs  object.rs  receipt.rs  temporal.rs
docs/: architecture.md  cli-reference.md  getting-started.md  sdk-guide.md
