[package]
name = "wll-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line interface for the WorldLine Ledger"

[[bin]]
name = "wll"
path = "src/main.rs"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
wll-store = { workspace = true }
wll-dag = { workspace = true }
wll-ledger = { workspace = true }
wll-fabric = { workspace = true }
wll-gate = { workspace = true }
wll-refs = { workspace = true }
wll-index = { workspace = true }
wll-diff = { workspace = true }
wll-merge = { workspace = true }
wll-pack = { workspace = true }
wll-sync = { workspace = true }
wll-protocol = { workspace = true }
wll-server = { workspace = true }
wll-sdk = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
