[package]
name = "wll-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Directed acyclic graph operations for WorldLine Ledger commit history"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
