[package]
name = "wll-fabric"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Network transport fabric for the WorldLine Ledger: framing, routing, and wire protocol"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
