[package]
name = "wll-gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Policy gate pipeline for the WorldLine Ledger: capability checks, risk assessment, and commit authorization"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
