[package]
name = "wll-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wire protocol for the WorldLine Ledger: request/response framing, capability negotiation, and transfer encoding"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
wll-ledger = { workspace = true }
wll-pack = { workspace = true }
wll-refs = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
