[package]
name = "wll-refs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reference management for the WorldLine Ledger: branches, tags, and symbolic refs"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
