[package]
name = "wll-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP server for the WorldLine Ledger: REST API, smart protocol endpoints, and repository hosting"

[dependencies]
wll-types = { workspace = true }
wll-crypto = { workspace = true }
wll-store = { workspace = true }
wll-ledger = { workspace = true }
wll-refs = { workspace = true }
wll-pack = { workspace = true }
wll-protocol = { workspace = true }
wll-gate = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
