[package]
name = "wll-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Foundation types for the WorldLine Ledger: identities, temporal anchors, receipts, and object identifiers"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
